RESOLVED FIXED226675
[WebXR] WebXR on Cocoa doesn't work with webgl 1 contexts
https://bugs.webkit.org/show_bug.cgi?id=226675
Summary [WebXR] WebXR on Cocoa doesn't work with webgl 1 contexts
Dean Jackson
Reported 2021-06-04 21:06:31 PDT
[WebXR] WebXR on Cocoa doesn't work with webgl 1 contexts
Attachments
Patch (8.50 KB, patch)
2021-06-04 21:12 PDT, Dean Jackson
sam: review+
Dean Jackson
Comment 1 2021-06-04 21:06:56 PDT
Dean Jackson
Comment 2 2021-06-04 21:12:58 PDT
Sam Weinig
Comment 3 2021-06-05 08:18:32 PDT
Comment on attachment 430641 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430641&action=review > Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:355 > + // With IOSurfaces we'll do this each frame. It would be nice if we could make these work the same for both at some point.
Dean Jackson
Comment 4 2021-06-05 14:28:30 PDT
Note You need to log in before you can comment on or make changes to this bug.